// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Info Label Color Flavors 1`] = `
<div
  dir="ltr"
>
  <div
    class="fddocs-container"
  >
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-1"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 1
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-2"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 2
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-3"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 3
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-4"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 4
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-5"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 5
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-6"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 6
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-7"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 7
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-8"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 8
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-9"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 9
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-10"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        color 10
      </span>
      
    
    </span>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Info Label Display Only Info Label 1`] = `
<div
  dir="ltr"
>
  <div
    class="fddocs-container"
  >
    
    
    <span
      class="fd-info-label fd-info-label--display"
    >
      
        
      <span
        class="fd-info-label__text"
      >
        system state
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--display fd-info-label--numeric"
    >
      
        
      <span
        class="fd-info-label__numeric"
      >
        42
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-2 fd-info-label--icon fd-info-label--display "
    >
      
        
      <i
        class="fd-info-label__icon sap-icon--upload-to-cloud"
        role="presentation"
      />
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-1 fd-info-label--icon fd-info-label--display"
    >
      
        
      <i
        class="fd-info-label__icon sap-icon--future"
        role="presentation"
      />
      
        
      <span
        class="fd-info-label__text"
      >
        Info Label
      </span>
      
    
    </span>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Info Label Info Label with Icon 1`] = `
<div
  dir="ltr"
>
  <div
    class="fddocs-container"
  >
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-1 fd-info-label--icon"
    >
      
        
      <i
        class="fd-info-label__icon sap-icon--future"
        role="presentation"
      />
      
        
      <span
        class="fd-info-label__text"
      >
        Info Label
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--accent-color-2 fd-info-label--icon"
    >
      
        
      <i
        class="fd-info-label__icon sap-icon--upload-to-cloud"
        role="presentation"
      />
      
    
    </span>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Info Label Numeric Info Label 1`] = `
<div
  dir="ltr"
>
  <div
    class="fddocs-container"
  >
    
    
    <span
      class="fd-info-label fd-info-label--numeric fd-info-label--accent-color-1"
    >
      
        
      <span
        class="fd-info-label__numeric"
      >
        6
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--numeric fd-info-label--accent-color-2"
    >
      
        
      <span
        class="fd-info-label__numeric"
      >
        6.2
      </span>
      
    
    </span>
    
    
    <span
      class="fd-info-label fd-info-label--numeric fd-info-label--accent-color-3"
    >
      
        
      <span
        class="fd-info-label__numeric"
      >
        42k
      </span>
      
    
    </span>
    

  </div>
  

</div>
`;
